@@ -5,6 +5,8 @@ update-manager (1:0.125) UNRELEASED; urgency=low
     release upgrader and use the base-installer/kernel/*.sh
     functionality to ensure we select the most appropriate
     kernel on upgrade
+  * integrate automatic updates to base-installer into the
+    pre-build.sh bzr hook
   * UpdateManager/Core/UpdateList.py, UpdateManager/UpdateManager.py:
     - filter warnings
   * UpdateManager/SimpleGtkbuilderApp.py:
@@ -16,7 +18,7 @@ update-manager (1:0.125) UNRELEASED; urgency=low
   * Refresh .pot file (and .po files) so that new UI strings are available
     for translation in LP.  LP: #425014.
 
- -- Michael Vogt <egon@top.ping.de>  Fri, 04 Sep 2009 21:21:09 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Sep 2009 15:58:36 +0200
 
 update-manager (1:0.124.11) karmic; urgency=low
 
